Previous correction of html path for shakespeare didn't work this is the real deal

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -19,7 +19,7 @@ website:
         menu:
           - href: data viz/school_income.qmd
             text: "Student Income Status at Elite Schools"
-          - href: data viz/shakespeare_word.qmd
+          - href: data viz/shakespeare_words.qmd
             text: "Shakespeare Word Cloud"
   open-graph:
     locale: en_US
