--- a/_quarto.yml
+++ b/_quarto.yml
@@ -18,6 +18,8 @@ website:
             text: "AMLO Project (under development)"
           - href: projects/the office/office_text_analysis.qmd
             text: "Text Analysis: *The Office*"
+          - href: projects/simulation_study/permutation_experiment.qmd
+            text: "Mini Experiment: *Room Draw Permutation*"
       - text: "Tidytuesday"
         menu:
           - href: tidytuesday/school_income.qmd
