added linked in email

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -5,7 +5,7 @@ project:
 website:
   title: "Kevin Valdivia"
 #  site-url: https://yourwebsite.dev  # Add your site URL if applicable
-  description: "Your website description"  # Add a description for the website
+  description: ""  # Add a description for the website
   navbar:
     right:
       - href: index.qmd
